--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,24 @@
+:root {
+    --blanco: #ffffff;
+    --oscuro: #212121;
+    --primario: #00008b;
+    --secundario: #cf0a0abb;
+    --gris: #757575;
+}
+
+
 html {
     font-size: 62.5%;
 }
 body {
     font-size: 16px;
+    font-family: 'Krub', sans-serif;
 }
-h1 {
+.titulo {
     text-align: center;
-    color: royalblue;
     font-size: 3.8rem;
 }
 
-span {
+.titulo span {
     font-size: 2rem;
 }
