--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,12 @@
 
 html {
     font-size: 62.5%;
+    box-sizing: border-box;
 }
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
+
 body {
     font-size: 16px;
     font-family: 'Krub', sans-serif;
@@ -23,7 +28,7 @@ body {
 }
 
 .contenedor {
-    width: 120rem;
+    max-width: 120rem;
     margin: 0 auto;
 }
 
@@ -33,10 +38,19 @@ body {
 
 .navegacion-principal {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column; 
+}
+
+@media (min-width: 768px) {
+    .navegacion-principal{
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .navegacion-principal a {
+    display: block;
+    text-align: center;
     color: var(--blanco);
     text-decoration: none;
     font-size: 2rem;
@@ -46,4 +60,19 @@ body {
 
 .navegacion-principal a:hover {
     background-color: var(--primario);
+}
+
+.hero {
+    background-image: url(../img/fondo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    position: relative;
+}
+
+.contenido-hero {
+    position: absolute;
+    background-color: rgb( 0,0,0, .5 );
+    width: 100%;
+    height: 100%;
 }
